<resources>
    <string name="app_name">MyFoodApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
    </string>
    <string name="discovery">Khám phá</string>
    <string name="goodwill">Ưu đãi</string>
    <string name="order">Đặt hàng</string>
    <string name="account">Cá nhân</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search_item">Search for a food item</string>
    <string name="informationUser">
        Lê Hồng Dương | (+84) 98 946 52 270
        Số nhà 5a ngõ 54 Ao Sen
        Quận Hà Đông, Phường Mộ Lao, Hà Nội
    </string>


</resources>